--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,8 @@ th,
 td {
   border: 1px solid #999;
 }
+
+.active{color: orange;}
+
+.outer{position: absolute;width: 100%;height: 100%; background-color: rgba(0,0,0,.3);top: 0;bottom: 0;right: 0;left: 0;z-index: 99;display: flex;align-items: center;}
+.modal-inner{display: flex;width: 50%;height: max-content;background-color: #fff;flex-direction: column;align-self: center;margin: auto;}
